--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,4 @@
+language: generic
 sudo: required
 services:
   - docker
@@ -6,7 +7,6 @@ before_install:
   - docker build -t florentb1/react-test -f ./client/Dockerfile.dev
 
 script:
-  - docker run florentb1/react-test npm test -- --coverage
   - docker run -e CI=true florentb1/react-test npm test
 
 after_success:
@@ -16,7 +16,6 @@ after_success:
   - docker build -t florentb1/multi-worker ./worker
   # Log in to the docker CLI
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
-
   # Take those images and push them to docker hub
   - docker push florentb1/multi-client
   - docker push florentb1/multi-nginx
